# demo_fruity

./: .gitignore  README (2).md  readme.md  setup.bat
projects/: CMakeLists.txt  Makefile  Makefile.NRF51  a.out
projects/config/: Config.h  board_pca10040.h  nrf_drv_config.h  types.h
projects/inc/: IoModule.h  Logger.h  Main.h  Module.h  NewStorage.h  Node.h
projects/inc_c/: SEGGER_RTT.h
projects/linker/: gcc_nrf51_s130_16kb.ld
projects/src/: Config.cpp  Main.cpp
projects/src/mesh/: Node.cpp
projects/src/modules/: AdvertisingModule.cpp  EnrollmentModule.cpp  IoModule.cpp  ScanningModule.cpp  StatusReporterModule.cpp
projects/src/test/: TestBattery.cpp
projects/src/utility/: Logger.cpp  Storage.cpp  Terminal.cpp  Utility.cpp
sdk/arm_cmsis_4_3/Device/ARM/ARMSC300/Source/GCC/: startup_ARMSC300.c
sdk/ehal_2015_09_08/ARM/: CMSIS
sdk/ehal_2015_09_08/ARM/Nordic/nRF51/: nrf51_sdk
sdk/ehal_2015_09_08/ARM/Nordic/nRF52/: nrf52_sdk
sdk/nrf_sdk_11_0/components/softdevice/s130/headers/: nrf_svc.h
sdk/nrf_sdk_11_0/components/toolchain/gcc/: Makefile.posix  Makefile.windows  gcc_startup_nrf51.s  nrf5x_common.ld
